--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,20 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+@keyframes is-liked {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.25);
+  }
+}
+
+ @keyframes sparks {
+  from {
+    --animation-sparks-color: transparent;
+  }
+  to {
+    --animation-sparks-color: #FF0000;
+  }
+ }
