--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,14 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --heart-contour: #000;
+    --animation-fill-color: transparent;
+    --animation-sparks-color: transparent;
+    --animation-core-color: transparent;
+    --main-font: Inter-Variable;
+    --accent-font: PressStart2P-Regular;
+    --title-font-weight: 715;
+    --text-font-weight: 410;
+    --box-width: clamp(23.1875rem, 15.9472rem + 30.892vw, 43.75rem);
+    --header-height: clamp(20.1875rem, 19.2852rem + 3.8498vw, 22.75rem);
+    --card-height: clamp(47.125rem, 42.7676rem + 18.5915vw, 59.5rem);
+}
