feature buttons hover

--- a/styles/style.css
+++ b/styles/style.css
@@ -102,10 +102,30 @@ text-transform: uppercase;
   margin-block-end: 25px;
   margin-inline-end: 25px;
 }
+
 .button {
-border: none;
-background-color: transparent;
+  border: none;
+  background-color: #fff;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  
 }
+
+.button::before{
+  content: "";
+  background-color: #000;
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+}
+
+.button:hover::before {
+  transform: translateX(0);
+}
+
 .contour {
   transition: fill 0.1s linear;
 }
@@ -115,6 +135,10 @@ background-color: transparent;
 .core {
   transition: fill 0.3s linear;
   transition-delay: 0.03s;
+}
+.card__icon-button {
+  border: none;
+  background-color: transparent;
 }
 .card__icon-button:hover .core {
   transition-delay: 0s;
@@ -180,6 +204,10 @@ background-color: transparent;
   font-size: 14px;
   font-weight: 400;
   line-height: 90%;
+  position: relative;
+  z-index: 2;
+  color: #fff;
+  mix-blend-mode: difference;
 }
 
 .button-save {
@@ -194,7 +222,54 @@ background-color: transparent;
   gap: 8px;
 }
 
-.save-svg {
+.button-save-svg {
   inline-size: 28px;
   aspect-ratio: 1 / 1;
+}
+.dialog-save {
+  inline-size: 341px;
+  block-size: min-content;
+  padding: 30px 38px;
+}
+.dialog-info {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+.dialog-save-svg {
+  inline-size: 39px;
+  aspect-ratio: 1 / 1;
+}
+.dialog__text {
+  text-transform: uppercase;
+  font-family: 'PressStart2P-Regular';
+  line-height: 150%;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 0%;
+}
+
+.button-save-close {
+  inline-size: 261px;
+  block-size: 38px;
+  outline: solid 2px #000;
+  background-color: #fff;
+  text-transform: uppercase;
+  font-family: 'PressStart2P-Regular';
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin-top: 30px;
+  margin-left: 40px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.save-svg {
+  mix-blend-mode: difference;
+  position: relative;
+  z-index: 2;
 }
