--- a/styles/style.css
+++ b/styles/style.css
@@ -16,8 +16,8 @@
   min-block-size: 100dvb;
   font-family: 'Inter-Variable', sans-serif;
   font-variation-settings: 'wght' var(--text-font-weight,);
-  background-image: repeating-linear-gradient(to bottom, #d3d3d3, transparent 4px),
-                    repeating-linear-gradient(to right, #d3d3d3, transparent 4px),
+  background-image: repeating-linear-gradient(to bottom, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px 4px),
+                    repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px 4px),
                     linear-gradient(to bottom, #e7e7e7, #1a1a1a);          
   background-size: cover;
   background-attachment: fixed;
@@ -45,13 +45,13 @@
 }
 .header_title {
   font-family: 'PressStart2P-Regular';
-  font-size: 49px;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   font-weight: 400;
   text-transform: uppercase;
 }
 .header_subtitle {
 font-family: 'PressStart2P-Regular';
-font-size: 14px;
+font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
 font-weight: 400;
 text-transform: uppercase;
 }
@@ -78,13 +78,45 @@ text-transform: uppercase;
   inline-size: 100%;
   aspect-ratio: 1 / 1;
   object-fit: cover;
+  
 }
+.article_image-box {
+  position: relative;
+}
+.lable {
+  position: absolute;
+  top: 27px;
+  right: 25px;
+  text-shadow:
+  -1px 0 #fff, 
+  0 1px #fff, 
+  1px 0 #fff, 
+  0 -1px #fff;
+  font-family: 'PressStart2P-Regular';
+  font-size: 14px;
+  font-weight: 400;
+  z-index: 2;
+  mix-blend-mode: hard-light;
+  color: #000;
+}
+
+@supports((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
+  .lable {
+      -webkit-text-stroke: 1px #fff;
+      text-stroke: 1px #fff;
+      text-shadow: none;
+    }
+} 
 .article_title {
   margin: 4px 12px;
   font-family: inherit;
   font-size: 18px;
   line-height: 100%;
   font-variation-settings: 'wght' var(--title-font-weigh, 715);
+  inline-size: 100%;
+  text-wrap: wrap;
+  display: flex;
+  flex-direction: column;
 }
 
 .article_text {
@@ -109,7 +141,7 @@ text-transform: uppercase;
   position: relative;
   z-index: 0;
   overflow: hidden;
-  
+  transition: box-shadow 0.3s ease;
 }
 
 .button::before{
@@ -126,6 +158,10 @@ text-transform: uppercase;
   transform: translateX(0);
 }
 
+.button:focus-visible {
+  box-shadow: 4px 4px 0px #000;
+}
+
 .contour {
   transition: fill 0.1s linear;
 }
@@ -139,6 +175,14 @@ text-transform: uppercase;
 .card__icon-button {
   border: none;
   background-color: transparent;
+  padding: 0  ;
+}
+.card__icon-button:focus {
+  outline: none;
+}
+.card__icon-button:focus-visible {
+  outline: solid 2px #000;
+  outline-offset: -1px;
 }
 .card__icon-button:hover .core {
   transition-delay: 0s;
@@ -272,4 +316,18 @@ dialog::backdrop {
   mix-blend-mode: difference;
   position: relative;
   z-index: 2;
+}
+
+@media (width >= 685px) {
+.article_title {
+  display: inline;
+}
+}
+
+@media (width >= 1400px) {
+  .button-save {
+    flex-direction: row;
+    inline-size: 335px;
+    block-size: 55px;
+  }
 }
