--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: 'Inter-Variable', sans-serif;
+  font-family: var(--main-font), sans-serif;
   font-variation-settings: 'wght' var(--text-font-weight,);
   background-image: repeating-linear-gradient(to bottom, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px 4px),
                     repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px 4px),
@@ -48,13 +48,13 @@
   background-color: white;
 }
 .header_title {
-  font-family: 'PressStart2P-Regular';
+  font-family: var(--accent-font);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   font-weight: 400;
   text-transform: uppercase;
 }
 .header_subtitle {
-font-family: 'PressStart2P-Regular';
+font-family: var(--accent-font);
 font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
 font-weight: 400;
 text-transform: uppercase;
@@ -98,7 +98,7 @@ text-transform: uppercase;
   0 1px #fff, 
   1px 0 #fff, 
   0 -1px #fff;
-  font-family: 'PressStart2P-Regular';
+  font-family: var(--accent-font);
   font-size: 14px;
   font-weight: 400;
   z-index: 2;
@@ -249,7 +249,7 @@ text-transform: uppercase;
 }
 
 .button__text {
-  font-family: 'PressStart2P-Regular';
+  font-family: var(--accent-font);
   font-size: 14px;
   font-weight: 400;
   line-height: 90%;
@@ -295,7 +295,7 @@ dialog::backdrop {
 }
 .dialog__text {
   text-transform: uppercase;
-  font-family: 'PressStart2P-Regular';
+  font-family: var(--accent-font);
   line-height: 150%;
   font-weight: 400;
   font-size: 14px;
@@ -308,7 +308,7 @@ dialog::backdrop {
   outline: solid 2px #000;
   background-color: #fff;
   text-transform: uppercase;
-  font-family: 'PressStart2P-Regular';
+  font-family: var(--accent-font);
   font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
