--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,16 +1,14 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
 @font-face {
   font-display: swap;
-  font-family: 'Inter-Variable';
-  src:
-    local('Inter-Variable'),
-    url('/fonts/Inter-Variable.woff2') format('woff2 supports variations'),
-    url('/fonts/Inter-Variable.woff2') format('woff2-variations');
-    font-weight: 410 715;
+  font-family: "Inter-Variable";
+  src: local("Inter-Variable"),
+    url("/fonts/Inter-Variable.woff2") format("woff2 supports variations"),
+    url("/fonts/Inter-Variable.woff2") format("woff2-variations");
+  font-weight: 410 715;
 }
 
 @font-face {
-     font-family: 'PressStart2P-Regular';
-    src: url('/fonts/PressStart2P-Regular.woff');
-   
+  font-family: "PressStart2P-Regular";
+  src: url("/fonts/PressStart2P-Regular.woff");
 }
