--- a/styles/style.css
+++ b/styles/style.css
@@ -10,15 +10,26 @@
 
 */
 
-
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
   font-family: var(--main-font), sans-serif;
-  font-variation-settings: 'wght' var(--text-font-weight,);
-  background-image: repeating-linear-gradient(to bottom, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px 4px),
-                    repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px 4px),
-                    linear-gradient(to bottom, #e7e7e7, #1a1a1a);          
+  font-variation-settings: "wght" var(--text-font-weight);
+  background-image: repeating-linear-gradient(
+      to bottom,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px 4px
+    ),
+    repeating-linear-gradient(
+      to right,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7, #1a1a1a);
   background-size: cover;
   background-attachment: fixed;
   padding: 0;
@@ -54,10 +65,10 @@
   text-transform: uppercase;
 }
 .header_subtitle {
-font-family: var(--accent-font);
-font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
-font-weight: 400;
-text-transform: uppercase;
+  font-family: var(--accent-font);
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
 .content {
@@ -65,7 +76,7 @@ text-transform: uppercase;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-} 
+}
 
 .article {
   background-color: #fff;
@@ -89,16 +100,43 @@ text-transform: uppercase;
 }
 .article_image-box {
   position: relative;
+  overflow: hidden;
 }
+
+.article_image_01-01 {
+  filter: grayscale(100%) brightness(0.9);
+}
+
+.article_image_01-02 {
+  filter: blur(5px);
+  transform: scale(105%);
+}
+
+.article_image_02-01 {
+  filter: saturate(30%);
+}
+
+.article_image_02-02 {
+  filter: hue-rotate(90deg);
+}
+
+.article_image_03-01 {
+  filter: grayscale(100%);
+}
+
+.article_image_03-02 {
+  filter: invert(80%);
+}
+
+.article_image_now {
+  filter: sepia(200%) brightness(0.8);
+}
+
 .lable {
   position: absolute;
   top: 29px;
   right: 27px;
-  text-shadow:
-  -1px 0 #fff, 
-  0 1px #fff, 
-  1px 0 #fff, 
-  0 -1px #fff;
+  text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
   font-family: var(--accent-font);
   font-size: 14px;
   font-weight: 400;
@@ -107,19 +145,19 @@ text-transform: uppercase;
   color: #000;
 }
 
-@supports((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
+@supports ((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
   .lable {
-      -webkit-text-stroke: 1px #fff;
-      text-stroke: 1px #fff;
-      text-shadow: none;
-    }
-} 
+    -webkit-text-stroke: 1px #fff;
+    text-stroke: 1px #fff;
+    text-shadow: none;
+  }
+}
 .article_title {
   margin: 4px 12px;
   font-family: inherit;
   font-size: 18px;
   line-height: 100%;
-  font-variation-settings: 'wght' var(--title-font-weigh, 715);
+  font-variation-settings: "wght" var(--title-font-weigh, 715);
   text-wrap: wrap;
   display: flex;
   flex-direction: column;
@@ -151,7 +189,7 @@ text-transform: uppercase;
   transition: box-shadow 0.3s ease;
 }
 
-.button::before{
+.button::before {
   content: "";
   background-color: #000;
   position: absolute;
@@ -182,7 +220,7 @@ text-transform: uppercase;
 .card__icon-button {
   border: none;
   background-color: transparent;
-  padding: 0  ;
+  padding: 0;
 }
 .card__icon-button:focus {
   outline: none;
@@ -204,8 +242,8 @@ text-transform: uppercase;
 }
 .card__icon-button:active {
   --heart-contour: #000;
-  --animation-fill-color: #FF0000;
-  --animation-core-color: #FF0000;
+  --animation-fill-color: #ff0000;
+  --animation-core-color: #ff0000;
 }
 .card__icon-button:active .core {
   transition-delay: 0s;
@@ -214,9 +252,9 @@ text-transform: uppercase;
   transition-delay: 0.05s;
 }
 .card__icon-button:has(.is-liked) {
-  --heart-contour: #FF0000;
-  --animation-fill-color: #FF0000;
-  --animation-core-color: #FF0000;
+  --heart-contour: #ff0000;
+  --animation-fill-color: #ff0000;
+  --animation-core-color: #ff0000;
 }
 .card__icon-button:has(.is-liked) .core {
   transition-delay: 0s;
@@ -246,9 +284,8 @@ text-transform: uppercase;
   outline-offset: -1px;
   inline-size: 130px;
   block-size: 38px;
-  background-color: #fff ;
+  background-color: #fff;
   text-transform: uppercase;
-
 }
 
 .button__text {
@@ -266,7 +303,7 @@ text-transform: uppercase;
   inline-size: 306px;
   block-size: 84px;
   outline: solid 2px #000;
-  background-color: #fff ;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -328,10 +365,12 @@ dialog::backdrop {
 }
 
 @media (width >= 685px) {
-.article_title {
-  display: inline;
-  margin-bottom: ;
-}
+  .article_title {
+    display: inline;
+  }
+  .article_image {
+    margin-top: 5px;
+  }
 }
 
 @media (width >= 1400px) {
