--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,14 +1,14 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
-    --save-svg-color: #fff;
-    --heart-contour: #000;
-    --animation-fill-color: transparent;
-    --animation-sparks-color: transparent;
-    --animation-core-color: transparent;
-    --main-font: 'Inter-Variable';
-    --accent-font: 'PressStart2P-Regular';
-    --title-font-weight: 715;
-    --text-font-weight: 410;
-    --box-width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
-    --header-height: clamp(20.4375rem, 19.5352rem + 3.8498vw, 23rem);
+  --save-svg-color: #fff;
+  --heart-contour: #000;
+  --animation-fill-color: transparent;
+  --animation-sparks-color: transparent;
+  --animation-core-color: transparent;
+  --main-font: "Inter-Variable";
+  --accent-font: "PressStart2P-Regular";
+  --title-font-weight: 715;
+  --text-font-weight: 410;
+  --box-width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+  --header-height: clamp(20.4375rem, 19.5352rem + 3.8498vw, 23rem);
 }
