--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,7 +6,7 @@
   --animation-sparks-color: transparent;
   --animation-core-color: transparent;
   --main-font: "Inter-Variable";
-  --accent-font: "PressStart2P-Regular";
+  --accent-font: "PressStart2P";
   --title-font-weight: 715;
   --text-font-weight: 410;
   --box-width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
