--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,8 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
-  block-size: var(--header-height);
+  padding-block-start: clamp(7.625rem, 7.4489rem + 0.7512vw, 8.125rem);
+  padding-block-end: clamp(7.625rem, 7.4489rem + 0.7512vw, 8.125rem);
   inline-size: var(--box-width);
   margin-block-start: 100px;
   margin-block-end: 100px;
@@ -47,13 +48,13 @@
   background-color: white;
 }
 .header_title {
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   font-weight: 400;
   text-transform: uppercase;
 }
 .header_subtitle {
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   font-weight: 400;
   text-transform: uppercase;
@@ -68,12 +69,11 @@
 
 .article {
   background-color: #fff;
-  block-size: 758px;
   outline: solid 2px #000;
   background-color: white;
   block-size: min-content;
   inline-size: var(--box-width);
-  margin-bottom: 52px;
+  margin-block-end: 52px;
   outline-offset: -1px;
   padding-top: 5px;
 }
@@ -132,7 +132,7 @@
   top: 29px;
   right: 27px;
   text-shadow: -1px 0 #fff, 0 1px #fff, 1px 0 #fff, 0 -1px #fff;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   font-weight: 400;
   z-index: 2;
@@ -160,7 +160,7 @@
   font-family: inherit;
   font-size: 18px;
   line-height: 21px;
-  font-weight: 410;
+  font-variation-settings: 'wght' 410;
   margin: 25px 29px 23px 25px;
 }
 .article_interactive {
@@ -179,6 +179,8 @@
   z-index: 0;
   overflow: hidden;
   transition: box-shadow 0.3s ease;
+  cursor: pointer;
+  
 }
 
 .button::before {
@@ -196,7 +198,7 @@
 }
 
 .button:focus-visible {
-  box-shadow: 4px 4px 0px #000;
+  box-shadow: 2px 2px 0px #000;
 }
 
 .contour {
@@ -204,55 +206,61 @@
 }
 .main-body {
   transition: fill 0.3s linear;
+  --animation-fill-color: transparent;
 }
 .core {
   transition: fill 0.3s linear;
   transition-delay: 0.03s;
+  --animation-core-color: transparent;
 }
 .card__icon-button {
   border: none;
   background-color: transparent;
   padding: 0;
+  outline: solid 2px transparent;
+  transition: outline-color 0.3s ease;
+  outline-offset: -2px;
 }
+
 .card__icon-button:focus {
-  outline: none;
+  outline-style: none;
 }
+
 .card__icon-button:focus-visible {
   outline: solid 2px #000;
-  outline-offset: -1px;
 }
-.card__icon-button:hover .core {
+
+.like-icon:hover .core {
   transition-delay: 0s;
-}
-.card__icon-button:hover .main-body {
-  transition-delay: 0.05s;
-}
-.card__icon-button:hover {
-  --heart-contour: #000;
-  --animation-fill-color: #000;
   --animation-core-color: #000;
 }
-.card__icon-button:active {
+.like-icon:hover .main-body {
+  transition-delay: 0.05s;
+  --animation-fill-color: #000;
+}
+
+.like-icon:active {
   --heart-contour: #000;
   --animation-fill-color: #ff0000;
   --animation-core-color: #ff0000;
 }
-.card__icon-button:active .core {
+.like-icon:active .core {
   transition-delay: 0s;
 }
-.card__icon-button:active .main-body {
+.like-icon:active .main-body {
   transition-delay: 0.05s;
 }
 .card__icon-button:has(.is-liked) {
   --heart-contour: #ff0000;
-  --animation-fill-color: #ff0000;
-  --animation-core-color: #ff0000;
 }
+
 .card__icon-button:has(.is-liked) .core {
   transition-delay: 0s;
+  --animation-core-color: #ff0000;
 }
 .card__icon-button:has(.is-liked) .main-body {
   transition-delay: 0.05s;
+  --animation-fill-color: #ff0000;
 }
 .card__icon-button:has(.is-liked) .contour {
   transition: fill 0.3s linear;
@@ -281,7 +289,7 @@
 }
 
 .button__text {
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-size: 14px;
   font-weight: 400;
   line-height: 90%;
@@ -327,7 +335,7 @@ dialog::backdrop {
 }
 .dialog__text {
   text-transform: uppercase;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   line-height: 150%;
   font-weight: 400;
   font-size: 14px;
@@ -339,7 +347,7 @@ dialog::backdrop {
   outline: solid 2px #000;
   background-color: #fff;
   text-transform: uppercase;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), fantasy;
   font-weight: 400;
   font-size: 14px;
   text-transform: uppercase;
