--- a/styles/style.css
+++ b/styles/style.css
@@ -98,32 +98,32 @@
   z-index: 1;
 }
 
-.article_image_01-01 {
+.grayscale {
+  filter: grayscale(100%);
+}
+
+.grayscale-darker {
   filter: grayscale(100%) brightness(0.9);
 }
 
-.article_image_01-02 {
+.blur {
   filter: blur(5px);
   transform: scale(105%);
 }
 
-.article_image_02-01 {
+.saturate {
   filter: saturate(30%);
 }
 
-.article_image_02-02 {
+.hue-rotate {
   filter: hue-rotate(90deg);
 }
 
-.article_image_03-01 {
-  filter: grayscale(100%);
-}
-
-.article_image_03-02 {
+.invert {
   filter: invert(80%);
 }
 
-.article_image_now {
+.sepia-darker {
   filter: sepia(200%) brightness(0.8);
 }
 
@@ -138,6 +138,7 @@
   z-index: 2;
   mix-blend-mode: hard-light;
   color: #000;
+  text-transform: uppercase;
 }
 
 @supports ((text-stroke: 1px #000000) or (-webkit-text-stroke: 1px #000000)) {
@@ -153,7 +154,6 @@
   font-size: 18px;
   line-height: 120%;
   font-variation-settings: "wght" var(--title-font-weigh, 715);
-  display: inline-block;
 }
 
 .article_text {
@@ -173,7 +173,7 @@
 }
 
 .button {
-  border: none;
+  border: none;  
   background-color: #fff;
   position: relative;
   z-index: 0;
@@ -330,8 +330,7 @@ dialog::backdrop {
   background-color: rgb(0 0 0 / 0.75);
 }
 .dialog-save-svg {
-  inline-size: 39px;
-  aspect-ratio: 1 / 1;
+  inline-size: 78px;
 }
 .dialog__text {
   text-transform: uppercase;
