fixed: save svg size

--- a/styles/style.css
+++ b/styles/style.css
@@ -86,7 +86,6 @@
   transform: scale(105%);
   position: relative;
   z-index: -1;
-  
 }
 
 .article_image-box {
@@ -160,7 +159,7 @@
   font-family: inherit;
   font-size: 18px;
   line-height: 21px;
-  font-variation-settings: 'wght' 410;
+  font-variation-settings: "wght" 410;
   margin: 25px 29px 23px 25px;
 }
 .article_interactive {
@@ -173,14 +172,13 @@
 }
 
 .button {
-  border: none;  
+  border: none;
   background-color: #fff;
   position: relative;
   z-index: 0;
   overflow: hidden;
   transition: box-shadow 0.3s ease;
   cursor: pointer;
-  
 }
 
 .button::before {
@@ -312,7 +310,7 @@
 }
 
 .button-save-svg {
-  inline-size: 21px;
+  inline-size: 28px;
   aspect-ratio: 1 / 1;
 }
 .dialog-save {
@@ -371,5 +369,8 @@ dialog::backdrop {
     flex-direction: row;
     inline-size: 335px;
     block-size: 55px;
+  }
+  .button-save-svg {
+    inline-size: 21px;
   }
 }
