--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@
 }
 
 .article_image {
-  inline-size: calc(100% - 2px);
+  inline-size: 100%;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   object-position: center;
